Revert "Bratseth/real resources in model"